--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  username: MyString
-  email: MyString
-  timestamps: MyString
+  username: username1
+  email: user_test@test.com
 
 two:
-  username: MyString
-  email: MyString
-  timestamps: MyString
+  username: username2
+  email: user_test1@test.com
